[package]
name = "theOne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
eframe = "0.26.2"

# For image support:
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }